# peprs

./: .gitignore  Cargo.toml  Changes.md  Makefile  README.md  samples.json
.claude/: settings.local.json
.github/workflows/: build-binaries.yml  build-python-bindings.yml  build-wasm-bindings.yml  python-tests.yml  rust-publish.yml  tests.yml
eido/: Cargo.toml
eido/src/: error.rs  lib.rs  schema.rs  validate.rs
example-peps/example_amendments1/: sample_table.csv  sample_table_newLib.csv  sample_table_newLib2.csv
example-peps/example_basic/: sample_schema.yaml  samples.yaml
example-peps/example_derive/: sample_table.csv
example-peps/example_derive_sample_name/: project_config.yaml  samples.csv
example-peps/example_duplicate/: project_config.yaml  sample_table.csv
example-peps/example_new_st_index/: project_config.yaml  sample_table.csv
example-peps/example_remove/: project_config.yaml  sample_table.csv
example-workflows/: example.wdl
example-workflows/nf/: example-simple.nf
example-workflows/wdl/: example-simple.wdl  example-with-struct.wdl
pephub-client/: Cargo.toml
pephub-client/src/: api.rs  cache.rs
peprs/: Cargo.toml
peprs-cli/: Cargo.toml
peprs-cli/src/: cli.rs  lib.rs  main.rs
peprs-core/: Cargo.toml
peprs-core/src/: config.rs  consts.rs  error.rs  lib.rs  project.rs  sample.rs  utils.rs  wdl.rs
peprs-eido/: Cargo.toml
peprs-eido/src/: error.rs  lib.rs  schema.rs  validate.rs
peprs-eido/tests/: config_validation_tests.rs  remote_validation_tests.rs  sample_validation_tests.rs  validation_tests.rs
peprs-eido/tests/data/peps/test_pep/: test_sample_table.csv
peprs-eido/tests/data/schemas/: schema_base.yaml  schema_basic.yaml  schema_missing_col.yaml  schema_project_level.yaml  schema_with_import.yaml  schema_with_tangible.yaml  test_schema.yaml
peprs-py/: Cargo.toml  README.md  pyproject.toml
peprs-py/bench/: README.md  bench_plot.py  from_polars.py  pyvrs.py  simple.py  summarize.py
peprs-py/py_src/peprs/: __init__.py  __init__.pyi  _pydantic.py  const.py
peprs-py/py_src/peprs/eido/: __init__.py  __init__.pyi
peprs-py/src/: error.rs  lib.rs  project.rs  samples.rs  utils.rs
peprs-py/src/eido/: error.rs  functions.rs  mod.rs
peprs-py/tests/: conftest.py  missing_tests.md  test_eido.py  test_export.py  test_project.py  test_sample_modifiers.py
peprs-wasm/: Cargo.toml
peprs-wasm/demo/: index.html
peprs-wasm/src/: lib.rs
peprs/src/: lib.rs
src/: config.rs  csv_reader.rs  error.rs  lib.rs  main.rs  project.rs
src/common/: csv_reader.rs
tests/: output.csv
tests/example-peps/example_remove/: sample_table.csv
