[workspace]
resolver = "3"
members = [
    "peprs-core",
    "peprs-eido",
    "peprs-py",
    "peprs-cli",
    "pephub-client",
]
exclude = [
    "peprs-wasm",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/khoroshevskyi/peprs"
homepage = "https://pep.databio.org/"
authors = ["Oleksandr Khoroshevskyi"]

[workspace.dependencies]
polars = { version = "0.51.0", default-features = false, features = ["lazy", "is_in", "replace", "strings", "concat_str", "dtype-full", "polars-ops", "zip_with"]}
polars-io = { version = "0.51.0", default-features = false }
polars-lazy = { version = "0.51.0", default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.145"
thiserror = "2.0.16"
tracing = "0.1.44"
