[package]
name = "eido"
version = "0.1.0"
edition = "2024"

[dependencies]
peprs-core = { path = "../peprs-core" }
polars = { version = "x", features = ["lazy"] }
polars-jsonschema-bridge = "0.7.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.16"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"