[package]
name = "peprs-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "peprs_cli"
path = "src/lib.rs"

[[bin]]
name = "peprs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
tokio = "1.48.0"

# peprs core code
peprs-core = { path = "../peprs-core", features = ["wdl"] }
peprs-eido = { path = "../peprs-eido" }
serde_json.workspace = true
