[package]
name = "peprs-cli"
version = "0.1.0"
description = "Command-line tool for validating, inspecting, and converting PEP projects"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "peprs_cli"
path = "src/lib.rs"

[[bin]]
name = "peprs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
# peprs core code
peprs-core = { path = "../peprs-core", version = "0.1.0" }
peprs-eido = { path = "../peprs-eido", version = "0.1.0" }
serde_json.workspace = true
