[package]
name = "peprs-core"
version = "0.1.0"
description = "Core library for the PEP (Portable Encapsulated Projects) biological metadata specification"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
polars = { workspace = true }
polars-io = { workspace = true }
polars-lazy = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

regex = "1.11.3"
shellexpand = "3.1.1"
ureq = { version = "3.1.2", optional = true }

#chrono = "0.4.42"
#itertools = "0.14.0"

zip = { version = "8.2", optional = true }

wdl = { version = "0.19.0", optional = true }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }

[features]
default = ["zip", "csv", "json", "native"]
csv = ["polars-io/csv", "polars-lazy/csv"]
json = ["polars-io/json", "polars-lazy/json"]
native = ["polars/new_streaming", "polars/fmt", "dep:ureq"]
wdl = ["dep:wdl", "dep:tokio"]
zip = ["dep:zip"]

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

