[package]
name = "peprs-eido"
version = "0.1.0"
description = "JSON-schema validation for PEP projects (eido extensions)"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
peprs-core = { path = "../peprs-core", version = "0.1.0", default-features = false, features = ["csv", "json"] }
polars = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ureq = { version = "3.1.2", optional = true }

polars-jsonschema-bridge = "0.7.0"
jsonschema = { version = "0.29", default-features = false }

[features]
default = ["native"]
native = ["peprs-core/native", "dep:ureq"]

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
