[package]
name = "peprs-py"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "peprs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
pephub-client = { path = "../pephub-client", version = "0.1.0" }
pyo3-polars = "0.24.0"
pythonize = "0.25.0"
polars = { workspace = true }
serde_json = "1.0.145"


peprs-core = { path = "../peprs-core", version = "0.1.0" }
peprs-eido = { path = "../peprs-eido", version = "0.1.0" }
peprs-cli = { path = "../peprs-cli" }

tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
