[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "peprs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
peprs = "peprs:_cli_main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "py_src"
module-name = "peprs.peprs"
