[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "peprs"
description = "Rust-powered PEP sample metadata toolkit for Python"
requires-python = ">=3.10"
license = "MIT"

keywords = ["pep", "bioinformatics", "metadata", "samples"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
dynamic = ["version"]

[project.scripts]
peprs = "peprs:_cli_main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "py_src"
module-name = "peprs.peprs"
